--- a/fdisk/sfdisk.8
+++ b/fdisk/sfdisk.8
@@ -18,6 +18,11 @@ has four (main) uses: list the size of a partition, list the partitions
 on a device, check the partitions on a device, and - very dangerous -
 repartition a device.
 
+.B sfdisk
+doesn't understand GUID Partition Table (GPT) and
+it is not designed for large partitions. In particular case use more advanced GNU
+.B parted(8).
+
 .SS "List Sizes"
 .BI "sfdisk \-s " partition
 gives the size of
