--- a/mount/losetup.8
+++ b/mount/losetup.8
@@ -61,41 +61,38 @@ has to make sure that the Linux kernel knows about the encryption with that
 number, probably by patching the kernel. Standard numbers that are
 always present are 0 (no encryption) and 1 (XOR encryption).
 When the cryptoloop module is loaded (or compiled in), it uses number 18.
-This cryptoloop module wil take the name of an arbitrary encryption type
+This cryptoloop module will take the name of an arbitrary encryption type
 and finds the module that knows how to perform that encryption.
-(Thus, either one uses a number different from 18 with the
-.B \-E
-option, or one uses a name with the
-.B \-e
-option.)
 .SH OPTIONS
-.IP \fB\-a\fP
-Show status of all loop devices.
-.IP \fB\-d\fP
-Detach the file or device associated with the specified loop device.
-.IP "\fB\-E \fIencryption_type\fP"
-Enable data encryption with specified number.
-.IP "\fB\-e \fIencryption_name\fP"
-Enable data encryption with specified name.
-.IP "\fB\-f\fP"
-Find the first unused loop device. If a
+.IP "\fB\-a, \-\-all\fP"
+show status of all loop devices
+.IP "\fB\-d, \-\-detach\fP"
+detach the file or device associated with the specified loop device
+.IP "\fB\-e, \-E, \-\-encryption \fIencryption_type\fP"
+enable data encryption with specified name or number
+.IP "\fB\-f, \-\-find\fP"
+find the first unused loop device. If a
 .I file
 argument is present, use this device. Otherwise, print its name.
-.IP "\fB\-o \fIoffset\fP"
+.IP "\fB\-h, \-\-help\fP"
+print help
+.IP "\fB\-o, \-\-offset \fIoffset\fP"
 The data start is moved \fIoffset\fP bytes into the specified file or
 device.
-.IP "\fB\-p \fInum\fP"
+.IP "\fB\-p, \-\-pass-fd \fInum\fP"
 Read the passphrase from file descriptor with number
 .I num
-instead of from the terminal.
-.IP \fB\-r\fP
-Setup read-only loop device.
-.IP \fB\-s\fP
-Print device name if the
+instead of from the terminal
+.IP "\fB\-r, \-\-read-only\fP"
+setup read-only loop device
+.IP "\fB\-s, \-\-show\fP"
+print device name if the
 .I -f
 option and a
 .I file
-argument are present.
+argument are present
+.IP "\fB\-v, \-\-verbose\fP"
+verbose mode
 
 .SH RETURN VALUE
 .B losetup
