agetty: add 'O' escape code to display domain name
This patch add a new 'O' escape code to display domain name
by issue-file (/etc/issue) output.

(Based on an Gentoo patch.)

Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/login-utils/agetty.8
+++ b/login-utils/agetty.8
@@ -217,7 +217,10 @@ n
 Insert the nodename of the machine, also known as the hostname.
 .TP
 o
-Insert the domainname of the machine.
+Insert the NIS domainname of the machine.
+.TP
+O
+Insert the DNS domainname of the machine.
 .TP
 r
 Insert the release number of the OS, eg. 1.1.9.
