man pages: add "AVAILABILITY" section
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/disk-utils/blockdev.8
+++ b/disk-utils/blockdev.8
@@ -74,6 +74,6 @@ Reread partition table.
 .SH AUTHOR
 blockdev was written by Andries E. Brouwer.
 .SH AVAILABILITY
-blockdev is part of the util-linux-ng package and is available from
+The blockdev command is part of the util-linux-ng package and is available from
 ftp://ftp.kernel.org/pub/linux/utils/util-linux-ng/.
 
