--- a/disk-utils/mkfs.8
+++ b/disk-utils/mkfs.8
@@ -121,3 +121,6 @@ for the ext2 file system.
 .BR mkfs.vfat (8),
 .BR mkfs.xfs (8),
 .BR mkfs.xiafs (8)
+.SH AVAILABILITY
+The mkfs command is part of the util-linux-ng package and is available from
+ftp://ftp.kernel.org/pub/linux/utils/util-linux-ng/.
