--- a/disk-utils/mkswap.8
+++ b/disk-utils/mkswap.8
@@ -157,3 +157,6 @@ when creating the swapspace.
 .SH "SEE ALSO"
 .BR fdisk (8),
 .BR swapon (8)
+.SH AVAILABILITY
+The mkswap command is part of the util-linux-ng package and is available from
+ftp://ftp.kernel.org/pub/linux/utils/util-linux-ng/.
