--- a/fdisk/fdisk.8
+++ b/fdisk/fdisk.8
@@ -256,3 +256,6 @@ The option `dump partition table to file' is missing.
 .BR mkfs (8),
 .BR parted (8),
 .BR sfdisk (8)
+.SH AVAILABILITY
+The fdisk command is part of the util-linux-ng package and is available from
+ftp://ftp.kernel.org/pub/linux/utils/util-linux-ng/.
