--- a/fdisk/sfdisk.8
+++ b/fdisk/sfdisk.8
@@ -555,3 +555,6 @@ There is no support for non-DOS partition types.
 .BR fdisk (8),
 .BR mkfs (8),
 .BR parted (8)
+.SH AVAILABILITY
+The sfdisk command is part of the util-linux-ng package and is available from
+ftp://ftp.kernel.org/pub/linux/utils/util-linux-ng/.
