--- a/getopt/getopt.1
+++ b/getopt/getopt.1
@@ -438,4 +438,6 @@ Frodo Looijaard <frodo@frodo.looijaard.name>
 .BR getopt (3),
 .BR bash (1),
 .BR tcsh (1).
-
+.SH AVAILABILITY
+The getopt command is part of the util-linux-ng package and is available from
+ftp://ftp.kernel.org/pub/linux/utils/util-linux-ng/.
