--- a/hwclock/hwclock.8
+++ b/hwclock/hwclock.8
@@ -625,3 +625,6 @@ based on work done on the
 program by Charles Hedrick, Rob Hooft, and Harald Koenig.
 See the source code for complete history and credits.
 
+.SH AVAILABILITY
+The hwclock command is part of the util-linux-ng package and is available from
+ftp://ftp.kernel.org/pub/linux/utils/util-linux-ng/.
