--- a/login-utils/agetty.8
+++ b/login-utils/agetty.8
@@ -295,11 +295,6 @@ Linux port and more options. Still maintains the code.
 Eric Rasmussen <ear@usfirst.org>
 Added \-f option to display custom login messages on different terminals.
 
-.SH CREATION DATE
-.na
-.nf
-Sat Nov 25 22:51:05 MET 1989
-.SH LAST MODIFICATION
-.na
-.nf
-96/07/20
+.SH AVAILABILITY
+The agetty command is part of the util-linux-ng package and is available from
+ftp://ftp.kernel.org/pub/linux/utils/util-linux-ng/.
