--- a/misc-utils/namei.1
+++ b/misc-utils/namei.1
@@ -54,3 +54,6 @@ Roger Southwick  (rogers@amadeus.wr.tek.com)
 To be discovered.
 .SH "SEE ALSO"
 ls(1), stat(1)
+.SH AVAILABILITY
+The namei command is part of the util-linux-ng package and is available from
+ftp://ftp.kernel.org/pub/linux/utils/util-linux-ng/.
