--- a/mount/umount.8
+++ b/mount/umount.8
@@ -148,3 +148,6 @@ table of mounted file systems
 A
 .B umount
 command appeared in Version 6 AT&T UNIX.
+.SH AVAILABILITY
+The umount command is part of the util-linux-ng package and is available from
+ftp://ftp.kernel.org/pub/linux/utils/util-linux-ng/.
