--- a/partx/partx.8
+++ b/partx/partx.8
@@ -43,3 +43,7 @@ Specify the range of partitions (e.g --nr 2-4).
 .BR fdisk (8),
 .BR parted (8),
 .BR partprobe (8)
+
+.SH AVAILABILITY
+The partx command is part of the util-linux-ng package and is available from
+ftp://ftp.kernel.org/pub/linux/utils/util-linux-ng/.
