--- a/schedutils/chrt.1
+++ b/schedutils/chrt.1
@@ -93,8 +93,6 @@ to change the scheduling attributes of a process.  Any user can retrieve the
 scheduling information.
 .SH AUTHOR
 Written by Robert M. Love.
-.SH "REPORTING BUGS"
-Report bugs to <rml@tech9.net>.
 .SH COPYRIGHT
 Copyright \(co 2004 Robert M. Love
 .br
@@ -108,3 +106,6 @@ warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 See
 .BR sched_setscheduler (2)
 for a description of the Linux scheduling scheme.
+.SH AVAILABILITY
+The chrt command is part of the util-linux-ng package and is available from
+ftp://ftp.kernel.org/pub/linux/utils/util-linux-ng/.
