--- a/schedutils/ionice.1
+++ b/schedutils/ionice.1
@@ -69,3 +69,7 @@ io scheduler.
 
 .SH AUTHORS
 Jens Axboe <axboe@suse.de>
+
+.SH AVAILABILITY
+The ionice command is part of the util-linux-ng package and is available from
+ftp://ftp.kernel.org/pub/linux/utils/util-linux-ng/.
