--- a/sys-utils/dmesg.1
+++ b/sys-utils/dmesg.1
@@ -56,3 +56,6 @@ have an effect.
 .BR syslogd (8)
 .\" .SH AUTHOR
 .\" Theodore Ts'o (tytso@athena.mit.edu)
+.SH AVAILABILITY
+The dmesg command is part of the util-linux-ng package and is available from
+ftp://ftp.kernel.org/pub/linux/utils/util-linux-ng/.
