--- a/sys-utils/ipcrm.1
+++ b/sys-utils/ipcrm.1
@@ -122,3 +122,6 @@ compatibility the previous syntax is still supported.
 .BR shmdt (2),
 .BR shmget (2),
 .BR ftok (3)
+.SH AVAILABILITY
+The ipcrm command is part of the util-linux-ng package and is available from
+ftp://ftp.kernel.org/pub/linux/utils/util-linux-ng/.
