--- a/sys-utils/ipcs.1
+++ b/sys-utils/ipcs.1
@@ -56,3 +56,6 @@ summary
 .BR ipcrm (1)
 .SH AUTHOR
 krishna balasubramanian (balasub@cis.ohio-state.edu)
+.SH AVAILABILITY
+The ipcs command is part of the util-linux-ng package and is available from
+ftp://ftp.kernel.org/pub/linux/utils/util-linux-ng/.
