--- a/sys-utils/rdev.8
+++ b/sys-utils/rdev.8
@@ -174,3 +174,6 @@ Originally by Werner Almesberger (almesber@nessie.cs.id.ethz.ch)
 Modified by Peter MacDonald (pmacdona@sanjuan.UVic.CA)
 rootflags support added by Stephen Tweedie (sct@dcs.ed.ac.uk)
 .fi
+.SH AVAILABILITY
+The rdev command is part of the util-linux-ng package and is available from
+ftp://ftp.kernel.org/pub/linux/utils/util-linux-ng/.
