--- a/text-utils/pg.1
+++ b/text-utils/pg.1
@@ -236,3 +236,6 @@ Files that include
 .SM NUL
 characters cannot be displayed by
 .IR pg .
+.SH AVAILABILITY
+The pg command is part of the util-linux-ng package and is available from
+ftp://ftp.kernel.org/pub/linux/utils/util-linux-ng/.
