--- a/disk-utils/raw.8
+++ b/disk-utils/raw.8
@@ -94,3 +94,6 @@ contents of the actual storage device underneath.  This is deliberate,
 but is regarded either a bug or a feature depending on who you ask!
 .SH AUTHOR
 Stephen Tweedie (sct@redhat.com)
+.SH AVAILABILITY
+The raw command is part of the util-linux-ng package and is available from
+ftp://ftp.kernel.org/pub/linux/utils/util-linux-ng/.
