--- a/misc-utils/script.1
+++ b/misc-utils/script.1
@@ -142,3 +142,6 @@ places
 .Sy everything
 in the log file, including linefeeds and backspaces.
 This is not what the naive user expects.
+.Sh AVAILABILITY
+The script command is part of the util-linux-ng package and is available from
+ftp://ftp.kernel.org/pub/linux/utils/util-linux-ng/.
