--- a/mount/losetup.8
+++ b/mount/losetup.8
@@ -143,6 +143,9 @@ DES encryption is painfully slow. On the other hand, XOR is terribly weak.
 
 Cryptoloop is deprecated in favor of dm-crypt. For more details see
 .B cryptsetup(8).
+.SH AVAILABILITY
+The losetup command is part of the util-linux-ng package and is available from
+ftp://ftp.kernel.org/pub/linux/utils/util-linux-ng/.
 .\" .SH AUTHORS
 .\" .nf
 .\" Original version: Theodore Ts'o <tytso@athena.mit.edu>
