--- a/mount/mount.8
+++ b/mount/mount.8
@@ -2017,3 +2017,7 @@ consistency check in kernel even if noac is used.
 A
 .B mount
 command existed in Version 5 AT&T UNIX.
+.SH AVAILABILITY
+The mount command is part of the util-linux-ng package and is available from
+ftp://ftp.kernel.org/pub/linux/utils/util-linux-ng/.
+
