--- a/partx/addpart.8
+++ b/partx/addpart.8
@@ -34,3 +34,6 @@ Specify the length of the partition (in bytes).
 .BR parted (8),
 .BR partprobe (8),
 .BR partx (8)
+.SH AVAILABILITY
+The addpart command is part of the util-linux-ng package and is available from
+ftp://ftp.kernel.org/pub/linux/utils/util-linux-ng/.
