--- a/partx/delpart.8
+++ b/partx/delpart.8
@@ -28,3 +28,6 @@ Specify the partition number.
 .BR parted (8),
 .BR partprobe (8),
 .BR partx (8)
+.SH AVAILABILITY
+The delpart command is part of the util-linux-ng package and is available from
+ftp://ftp.kernel.org/pub/linux/utils/util-linux-ng/.
