--- a/schedutils/taskset.1
+++ b/schedutils/taskset.1
@@ -96,8 +96,6 @@ to change the CPU affinity of a process.  Any user can retrieve the affinity
 mask.
 .SH AUTHOR
 Written by Robert M. Love.
-.SH "REPORTING BUGS"
-Report bugs to <rml@tech9.net>.
 .SH COPYRIGHT
 Copyright \(co 2004 Robert M. Love
 .br
@@ -113,3 +111,6 @@ warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 See
 .BR sched_setscheduler (2)
 for a description of the Linux scheduling scheme.
+.SH AVAILABILITY
+The taskset command is part of the util-linux-ng package and is available from
+ftp://ftp.kernel.org/pub/linux/utils/util-linux-ng/.
