--- a/sys-utils/flock.1
+++ b/sys-utils/flock.1
@@ -107,3 +107,6 @@ This is free software; see the source for copying conditions.  There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 .SH "SEE ALSO"
 .BR flock (2)
+.SH AVAILABILITY
+The flock command is part of the util-linux-ng package and is available from
+ftp://ftp.kernel.org/pub/linux/utils/util-linux-ng/.
