--- a/sys-utils/renice.1
+++ b/sys-utils/renice.1
@@ -134,3 +134,6 @@ The
 .Nm
 command appeared in
 .Bx 4.0 .
+.Sh AVAILABILITY
+The renice command is part of the util-linux-ng package and is available from
+ftp://ftp.kernel.org/pub/linux/utils/util-linux-ng/.
