--- a/sys-utils/setsid.1
+++ b/sys-utils/setsid.1
@@ -13,3 +13,6 @@ runs a program in a new session.
 .BR setsid (2)
 .SH AUTHOR
 Rick Sladkey <jrs@world.std.com>
+.SH AVAILABILITY
+The setsid command is part of the util-linux-ng package and is available from
+ftp://ftp.kernel.org/pub/linux/utils/util-linux-ng/.
