--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
-util-linux-ng 2.13devel
+util-linux-ng 2.13-rc1
 
-* <TODO: the changelog will be generated from git>
+* see docs/v2.13-ReleaseNotes
 
 util-linux 2.13-pre7
 
