--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,8 @@
+
 util-linux-ng 2.13-rc1
 
-* see docs/v2.13-ReleaseNotes
+* see docs/v2.13-ReleaseNotes or complete changelog at
+  ftp://ftp.kernel.org/pub/linux/utils/util-linux-ng/v2.13/v2.13-rc1-Changelog
 
 util-linux 2.13-pre7
 
