--- a/mount/mount.8
+++ b/mount/mount.8
@@ -1779,38 +1779,109 @@ None.
 
 .SH "Mount options for xfs"
 .TP
-.BI biosize= size
-Sets the preferred buffered I/O size (default size is 64K).
-.I size
-must be expressed as the logarithm (base2) of the desired I/O size.
-Valid values for this option are 14 through 16, inclusive
-(i.e. 16K, 32K, and 64K bytes).
-On machines with a 4K pagesize, 13 (8K bytes) is also a valid
-.IR size .
-The preferred buffered I/O size can also be altered on an individual
-file basis using the
-.BR ioctl (2)
-system call.
+.BI allocsize= size
+Sets the buffered I/O end-of-file preallocation size when
+doing delayed allocation writeout (default size is 64KiB).
+Valid values for this option are page size (typically 4KiB)
+through to 1GiB, inclusive, in power-of-2 increments.
 .TP
-.B dmapi " / " xdsm
+.BR attr2 " / " noattr2
+The options enable/disable (default is disabled for backward
+compatibility on-disk) an "opportunistic" improvement to be
+made in the way inline extended attributes are stored on-disk.
+When the new form is used for the first time (by setting or
+removing extended attributes) the on-disk superblock feature
+bit field will be updated to reflect this format being in use.
+.TP
+.B barrier
+Enables the use of block layer write barriers for writes into
+the journal and unwritten extent conversion.  This allows for
+drive level write caching to be enabled, for devices that
+support write barriers.
+.TP
+.B dmapi
 Enable the DMAPI (Data Management API) event callouts.
+Use with the
+.B mtpt
+option.
+.TP
+\fBgrpid\fP / \fBbsdgroups\fP and \fBnogrpid\fP / \fBsysvgroups\fP
+These options define what group ID a newly created file gets.
+When grpid is set, it takes the group ID of the directory in
+which it is created; otherwise (the default) it takes the fsgid
+of the current process, unless the directory has the setgid bit
+set, in which case it takes the gid from the parent directory,
+and also gets the setgid bit set if it is a directory itself.
+.TP
+.BI ihashsize= value
+Sets the number of hash buckets available for hashing the
+in-memory inodes of the specified mount point.  If a value
+of zero is used, the value selected by the default algorithm
+will be displayed in
+.IR /proc/mounts .
+.TP
+.BR ikeep " / " noikeep
+When inode clusters are emptied of inodes, keep them around
+on the disk (ikeep) - this is the traditional XFS behaviour
+and is still the default for now.  Using the noikeep option,
+inode clusters are returned to the free space pool.
+.TP
+.B inode64
+Indicates that XFS is allowed to create inodes at any location
+in the filesystem, including those which will result in inode
+numbers occupying more than 32 bits of significance.  This is
+provided for backwards compatibility, but causes problems for
+backup applications that cannot handle large inode numbers.
+.TP
+.BR largeio " / " nolargeio
+If
+.B nolargeio
+is specified, the optimal I/O reported in
+st_blksize by
+.BR stat (2)
+will be as small as possible to allow user
+applications to avoid inefficient read/modify/write I/O.
+If
+.B largeio
+is specified, a filesystem that has a
+.B swidth
+specified
+will return the
+.B swidth
+value (in bytes) in st_blksize. If the
+filesystem does not have a
+.B swidth
+specified but does specify
+an
+.B allocsize
+then
+.B allocsize
+(in bytes) will be returned
+instead.
+If neither of these two options are specified, then filesystem
+will behave as if
+.B nolargeio
+was specified.
 .TP
 .BI logbufs= value
-Set the number of in-memory log buffers.
-Valid numbers range from 2-8 inclusive.
-The default value is 8 buffers for filesystems with a blocksize of 64K,
-4 buffers for filesystems with a blocksize of 32K,
-3 buffers for filesystems with a blocksize of 16K,
-and 2 buffers for all other configurations.
-Increasing the number of buffers may increase performance on
-some workloads at the cost of the memory used for the
-additional log buffers and their associated control structures.
+Set the number of in-memory log buffers.  Valid numbers range
+from 2-8 inclusive.
+The default value is 8 buffers for filesystems with a
+blocksize of 64KiB, 4 buffers for filesystems with a blocksize
+of 32KiB, 3 buffers for filesystems with a blocksize of 16KiB
+and 2 buffers for all other configurations.  Increasing the
+number of buffers may increase performance on some workloads
+at the cost of the memory used for the additional log buffers
+and their associated control structures.
 .TP
 .BI logbsize= value
 Set the size of each in-memory log buffer.
-Valid sizes are 16384 (16K) and 32768 (32K).
-The default value for machines with more than 32MB of memory is 32768,
-machines with less memory use 16384 by default.
+Size may be specified in bytes, or in kilobytes with a "k" suffix.
+Valid sizes for version 1 and version 2 logs are 16384 (16k) and
+32768 (32k).  Valid sizes for version 2 logs also include
+65536 (64k), 131072 (128k) and 262144 (256k).
+The default value for machines with more than 32MiB of memory
+is 32768, machines with less memory use 16384 by default.
 .TP
 \fBlogdev=\fP\fIdevice\fP and \fBrtdev=\fP\fIdevice\fP
 Use an external log (metadata journal) and/or real-time device.
@@ -1820,6 +1891,13 @@ The real-time section is optional, and the log section can be separate
 from the data section or contained within it.
 Refer to
 .BR xfs (5).
+.TP
+.BI  mtpt= mountpoint
+Use with the
+.B dmapi
+option. The value specified here will be
+included in the DMAPI mount event, and should be the path of
+the actual mountpoint that is used.
 .TP
 .B noalign
 Data allocations will not be aligned at stripe unit boundaries.
@@ -1839,21 +1917,41 @@ Filesystems mounted
 must be mounted read-only or the mount will fail.
 .TP
 .B nouuid
-Ignore the filesystem uuid. This avoids errors for duplicate uuids.
+Don't check for double mounted file systems using the file system uuid.
+This is useful to mount LVM snapshot volumes.
 .TP
 .B osyncisdsync
-Make writes to files opened with the O_SYNC flag set behave
-as if the O_DSYNC flag had been used instead.
+Make O_SYNC writes implement true O_SYNC.  WITHOUT this option,
+Linux XFS behaves as if an
+.B osyncisdsync
+option is used,
+which will make writes to files opened with the O_SYNC flag set
+behave as if the O_DSYNC flag had been used instead.
 This can result in better performance without compromising
 data safety.
-However if this option is in effect, timestamp updates from
+However if this option is not in effect, timestamp updates from
 O_SYNC writes can be lost if the system crashes.
+If timestamp updates are critical, use the
+.B osyncisosync
+option.
 .TP
-.BR quota " / " usrquota " / " uqnoenforce
-User disk quota accounting enabled, and limits (optionally) enforced.
+.BR uquota " / " usrquota " / " uqnoenforce " / " quota
+User disk quota accounting enabled, and limits (optionally)
+enforced.  Refer to
+.BR xfs_quota (8)
+for further details.
 .TP
-.BR grpquota " / " gqnoenforce
-Group disk quota accounting enabled and limits (optionally) enforced.
+.BR gquota " / " grpquota " / " gqnoenforce
+Group disk quota accounting enabled and limits (optionally)
+enforced. Refer to
+.BR xfs_quota (8)
+for further details.
+.TP
+.BR pquota " / " prjquota " / " pqnoenforce
+Project disk quota accounting enabled and limits (optionally)
+enforced. Refer to
+.BR xfs_quota (8)
+for further details.
 .TP
 \fBsunit=\fP\fIvalue\fP and \fBswidth=\fP\fIvalue\fP
 Used to specify the stripe unit and width for a RAID device or a stripe
@@ -1875,6 +1973,11 @@ option has been specified,
 and must be a multiple of the
 .B sunit
 value.
+.TP
+.B swalloc
+Data allocations will be rounded up to stripe width boundaries
+when the current end of file is being extended and the file
+size is larger than the stripe width size.
 
 .SH "Mount options for xiafs"
 None. Although nothing is wrong with xiafs, it is not used much,
