docs: fix authorship of 8-bit cleanup agetty patch
The patch:

	commit 6a4c63d9d90b24d770f887f8cd89fd20f8378267
	Author: Moritz Muehlenhoff <jmm@inutil.org>
	Date:   Thu Jul 19 00:29:13 2007 +0200

	agetty: 8 bit characters on the Linux console lead to input
	corruption

	Signed-off-by: LaMont Jones <lamont@mmjgroup.com>

has been posted and committed with wrong "Author" field.

Sorry to Samuel Thibault who is original author of the patch.

Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/AUTHORS
+++ b/AUTHORS
@@ -48,6 +48,7 @@ CONTRIBUTORS:
       Moritz Muehlenhoff <jmm@inutil.org>
       Pádraig Brady <P@draigBrady.com>
       Ram Pai <linuxram@us.ibm.com>
+      Samuel Thibault <samuel.thibault@ens-lyon.org>
       Stepan Kasal <skasal@redhat.com>
       Steve Grubb <sgrubb@redhat.com>
       Valerie Henson <val_henson@linux.intel.com>
