docs: update and sort AUTHORS file
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/AUTHORS
+++ b/AUTHORS
@@ -39,6 +39,7 @@ CONTRIBUTORS:
       Gabriel Barazer <gabriel@oxeva.fr>
       H. Peter Anvin <hpa@zytor.com>
       Jason Vas Dias <jvdias@redhat.com>
+      Justin B Rye <jbr@edlug.org.uk>
       Kay Sievers <kay.sievers@vrfy.org>
       LaMont Jones <lamont@mmjgroup.com>
       Luciano Chavez <lnx1138@us.ibm.com>
@@ -60,8 +61,8 @@ CONTRIBUTORS:
 TRANSLATORS (translationproject.org):
 
       Benno Schulenberg <benno@vertaalt.nl>            (nl)
+      Daniel Nylander <po@danielnylander.se>           (sv)
       Michael Piefel <piefel@informatik.hu-berlin.de>  (de)
       Phan Vinh Thinh <teppi82@gmail.com>              (vi)
-      Daniel Nylander <po@danielnylander.se>           (sv)
       Petr Pisar <petr.pisar@atlas.cz>                 (cs)
 
