docs: update ReleaseNotes
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/AUTHORS
+++ b/AUTHORS
@@ -28,6 +28,7 @@ AUTHORS (merged projects & commands):
 
 CONTRIBUTORS:
 
+      Alan Curry <pacman@TheWorld.com>
       Arkadiusz Miskiewicz <arekm@maven.pl>
       Balint Cristian <cbalint@redhat.com>
       Bernhard Walle <bwalle@suse.de>
