po: fix typo in de.po
de.po:9010: internationalized messages should not contain the `\r' escape sequence

Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/po/de.po
+++ b/po/de.po
@@ -8765,7 +8765,7 @@ msgid ""
 "\t-a : all (default)\n"
 msgstr ""
 "\t-s : Semaphoren\n"
-"\r-a : alles (Voreinstellung)\n"
+"\t-a : alles (Voreinstellung)\n"
 
 #: sys-utils/ipcs.c:134
 #, c-format
