docs: add ReleaseNotes, update NEWS, release++
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+util-linux-ng 2.13.0.1
+
+* bugfix release; fixing CVE-2007-5191
+* see docs/v2.13.0.1-ReleaseNotes complete changelog at
+  ftp://ftp.kernel.org/pub/linux/utils/util-linux-ng/v2.13/v2.13.0.1-Changelog
+
 util-linux-ng 2.13
 
 * see docs/v2.13-ReleaseNotes or complete changelog at
