docs: update AUTHORS file
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/AUTHORS
+++ b/AUTHORS
@@ -44,6 +44,7 @@ CONTRIBUTORS:
       Kay Sievers <kay.sievers@vrfy.org>
       LaMont Jones <lamont@mmjgroup.com>
       Luciano Chavez <lnx1138@us.ibm.com>
+      Ludwig Nussel <ludwig.nussel@suse.de>
       Marco d'Itri <md@Linux.IT>
       Martin Schlemmer <azarah@gentoo.org>
       Masatake YAMATO <jet@gyve.org>
