getopt: fix path to examples in getopt.1
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/getopt/getopt.1
+++ b/getopt/getopt.1
@@ -403,9 +403,8 @@ if it is called with
 Example scripts for (ba)sh and (t)csh are provided with the
 .BR getopt (1)
 distribution, and are optionally installed in 
-.B /usr/local/lib/getopt 
-or 
-.BR /usr/lib/getopt .
+.B /usr/share/getopt .
+
 .SH ENVIRONMENT
 .IP POSIXLY_CORRECT
 This environment variable is examined by the
