mount: add support for sizelimit= mount option (for loop mounts)
[kzak@redhat.com: split the original patch to small patches]
Signed-off-by: Shachar Shemesh <shachar@lingnu.com>
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/mount/mount.8
+++ b/mount/mount.8
@@ -2008,7 +2008,7 @@ and then mount this device on
 .IR /mnt .
 
 This type of mount knows about three options, namely
-.BR loop ", " offset " and " encryption ,
+.BR loop ", " offset ", " sizelimit " and " encryption ,
 that are really options to
 .BR \%losetup (8).
 (These options can be used in addition to those specific
